# inference

./: .gitignore  Pipfile  README.md  docker-compose.yaml  pyproject.toml
src/inference/: __init__.py  memory.py  models.py
src/inference/local/: __init__.py  models.py
src/inference/providers/: __init__.py  deepinfra.py  hf.py  ollama.py
src/inference_providers/: inference_provider.py
tests/: test_deepinfra.py  test_inferenceproviders.py  test_memory.py  test_models.py
