[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "inference"
version = "0.0.1"
authors = [
  { name="Lorand Banki", email="" },
]
description = "<todo>"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "huggingface-hub>=0.35.3",
    "jinja2>=3.1.6",
]

[project.urls]
Homepage = "https://github.com/bmln/inference"

[project.optional-dependencies]
local = [
    "accelerate>=1.10.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
